--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,4 @@
 
 @tailwind utilities;
 
-.bg-navigation {
-    background-image: radial-gradient(circle at 150px 100%, #151435, #262370);
-}
+@import 'custom';
