--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6328,7 +6328,7 @@ table {
 }
 
 .bg-navigation {
-  background-image: radial-gradient(circle at 150px 100%, #151435, #262370);
+  background-image: radial-gradient(circle at 150px 100%, #8631d5, #711ba3);
 }
 
 .bg-form {
